# needle

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  prometheus.yml  pyproject.toml
.github/workflows/: deploy.yaml
docker/: docker-compose.yaml  entrypoint.sh
docker/cache/: pyproject.toml
nginx/: default.conf  default.conf.template  generate-rsa.bat
src/needle/: __init__.py  __main__.py  _logging.py  app.py  cli.py  config.py  exception.py  interface.py  middleware.py  settings.py  utils.py
src/needle/static/css/: extra.css
src/needle/static/html/: placeholder.html
src/needle/templates/: system.jinja2
