[project]
name = "needle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Athroniaeth", email = "pierre.chaumont@hotmail.fr" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
needle = "needle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
