[project]
name = "needle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Athroniaeth", email = "pierre.chaumont@hotmail.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
]

[project.scripts]
needle = "needle:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
