[project]
name = "needle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Athroniaeth", email = "pierre.chaumont@hotmail.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "gradio>=5.6.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-dotenv>=1.0.1",
    "typer>=0.13.1",
    "uvicorn>=0.32.1",
]

[project.scripts]
needle = "needle:__main__.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
